tests/positive/channel_pipeline_compute.safe
-- Test: channel_pipeline_compute
-- Description: Three-stage channel pipeline with arithmetic in flight.
--   Stage 1 produces bounded samples, Stage 2 transforms them, and Stage 3
--   accumulates bounded totals from the filtered stream.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.1.p2:78f022f7
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p15:b5b29b0e
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p27:ef0ce6bd
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p28:ea6bd13c
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p20:8aa1a21e
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p31:a7297e97
-- Expected: ACCEPT

package channel_Pipeline_Compute

   type sample is range 0 to 100;
   type running_Total is range 0 to 1000;

   channel Raw_Ch      : sample capacity 2;
   channel Filtered_Ch : sample capacity 2;

   task Producer with Priority = 10
      seed : sample = 8;

      loop
         send Raw_Ch, seed;
         delay 0.001;



   task Filter with Priority = 10
      input  : sample;
      output : sample;

      loop
         receive Raw_Ch, input;
         output = input / 2 + 1;
         send Filtered_Ch, output;



   task Consumer with Priority = 10
      data     : sample;
      adjusted : running_Total;

      loop
         receive Filtered_Ch, data;
         adjusted = running_Total (running_Total (data) + 1);
         if running_Total (adjusted) > running_Total (50)
            delay 0.001;
         else
            delay 0.002;





